--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "hexlet/code",
+    "bin": ["bin/brain-games"],
+    "description": "my-first-step",
+    "license": "proprietary",
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
@@ -12,4 +15,6 @@
         }
     ],
     "require": {}
+    
 }
+
