--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "license": "proprietary",
     "autoload": {
         "psr-4": {
-            "Hexlet\\Code\\": "src/"
+            "Hexlet\\Code\\": "src/",
+      "Php\\Package\\": "src",
+      "Php\\Package\\Tests\\": "tests"
         }
     },
     "authors": [
@@ -14,7 +16,8 @@
             "email": "vonavud@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.12"
+    }
     
 }
-
