--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         }
     ],
     "require": {
-        "wp-cli/php-cli-tools": "^0.11.12",
-        "squizlabs/php_codesniffer": "*"
+        "wp-cli/php-cli-tools": "^0.11.12"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.6"
     }
-    
 }
