--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
     "license": "proprietary",
     "autoload": {
         "files": [
-            "src/Cli.php", 
-            "src/Even.php", 
-            "src/Calc.php"
+            "src/Cli.php",
+            "src/Engine.php",  
+            "src/Games/Even.php", 
+            "src/Games/Calc.php"
         ]
     },
     "authors": [
