--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "bin": [
     	"bin/brain-games",
     	"bin/brain-even",
-    	"bin/brain-calc"
+    	"bin/brain-calc",
+    	"bin/brain-gcd"
     ],
     "description": "my-first-step",
     "license": "proprietary",
@@ -12,7 +13,8 @@
             "src/Cli.php",
             "src/Engine.php",  
             "src/Games/Even.php", 
-            "src/Games/Calc.php"
+            "src/Games/Calc.php", 
+            "src/Games/Gcd.php"
         ]
     },
     "authors": [
