--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-    "name": "hexlet/php-project-lvl1",
+    "name": "hexlet/code",
     "bin": [
     	"bin/brain-games",
     	"bin/brain-even",
     	"bin/brain-calc",
     	"bin/brain-gcd",
-    	"bin/brain-progression"
+    	"bin/brain-progression",
+    	"bin/brain-prime"
     ],
     "description": "my-first-step",
     "license": "proprietary",
@@ -16,7 +17,8 @@
             "src/Games/Even.php", 
             "src/Games/Calc.php", 
             "src/Games/Gcd.php", 
-            "src/Games/Progression.php"
+            "src/Games/Progression.php",
+            "src/Games/Prime.php"
         ]
     },
     "authors": [
